# cpp-bootstrap

./: README.md
cmake-bootstrap/: readme.md
cmake-bootstrap/example-1/: CMakeLists.txt
cmake-bootstrap/example-1/src/: main.cc  main2.cc
cmake-bootstrap/example-1/src/helpers/: CMakeLists.txt  helper.cc  helper.hh
cmake-bootstrap/example-1/src/utils/: CMakeLists.txt  math_func.cc  print_func.cc
cmake-bootstrap/example-2/: CMakeLists.txt
cmake-bootstrap/example-2/src/: use_boost.cc
cmake-bootstrap/example-3/: CMakeLists.txt
cmake-bootstrap/example-3/src/common_utils/: CMakeLists.txt  math_utils.cc
cmake-bootstrap/example-3/tests/common_utils/: CMakeLists.txt  test_math_utils.cc
cpp-forward-declaration/: readme.md
cpp-forward-declaration/forward-declaration-exp/: CMakeLists.txt
cpp-forward-declaration/forward-declaration-exp/src/: main.cc
cpp-forward-declaration/forward-declaration-exp/src/helpers/: CMakeLists.txt  book_helper.cc  book_helper.hh
cpp-forward-declaration/forward-declaration-exp/src/objects/: CMakeLists.txt  book.cc  book.hh  book_fwd.hh
cpp-smart-pointer/: readme.md
cpp-smart-pointer/pointer-exp/: CMakeLists.txt  basic.cc  mem.cc  smart.cc
cpp-variant/: readme.md
cpp-variant/variant-exp/: CMakeLists.txt  example.cc  variant.cc
